# wikipedia-tree-browser

./: .gitignore  AGENTS.md  DEPLOYMENT.md  Procfile  README.md  TODO.md  build.sh  classes.py  command.py  database.py  download_chunks.py  env-example  graph_cluster_tree.py  index_pages.py  languages.py  main.py  package.json  progress_utils.py  pyproject.toml  requirements.txt  run-local.sh  test_clusters_service.py  test_pages_service.py  test_progress_bars.py  test_topic_discovery.py  test_transform.py  topic_discovery.py  transform.py  wp-embeddings.code-workspace
.githooks/: pre-commit
dataprep/: command.py  database.py  download_chunks.py  graph_cluster_tree.py  languages.csv  languages.py  migrate_to_slim.py  progress_utils.py  pyproject.toml  test_batch_update.py  test_centroid_batch_processing.py  test_centroid_computation.py  test_languages.py  test_performance_comparison.py  test_project_command.py  test_projection.py  test_small_cluster_projection.py  test_topic_discovery.py  transform.py
web/: TODO.md  pyproject.toml
web/backend/: API_MODEL_FIX_SUMMARY.md  DATABASE_MODEL_FIX_SUMMARY.md  main.py  pyproject.toml
web/backend/api/: clusters.py  pages.py  search.py
web/backend/app/: main.py
web/backend/docs/: CACHING_IMPLEMENTATION.md  TEST_COVERAGE_PLAN.md
web/backend/models/: cluster.py  page.py  search.py
web/backend/services/: cluster_service.py  database_service.py  search_service.py  service_model.py  service_setup.py
web/backend/test/: test_cache.py  test_clusters_service.py  test_database_service.py  test_environment.py  test_languages.py  test_pages_service.py  test_search.py  test_search_service.py  test_service_setup.py
web/backend/util/: cache.py  environment.py  languages.py
web/frontend/: ANCESTOR_BUGS_FIXED.md  ANCESTOR_VISUALIZATION_PLAN.md  ARCHITECTURE.md  DEBUG_ROOT_NODE.md  IMPLEMENTATION_PLAN.md  NODE_LINK_REARCHITECTURE_PLAN_V2.md  NODE_LINK_REARCHITECTURE_PLAN_V3.md  PHASE3_IMPLEMENTATION_SUMMARY.md  README.md  REQUIREMENTS.md  env.example  index.html  package-lock.json  package.json  tailwind.config.js  test_api_fix.html  test_billboard_hover.html  vite.config.ts
web/frontend/docs/: ANCESTOR_SPACING_ACTUAL_IMPLEMENTATION.md  ANCESTOR_SPACING_IMPLEMENTATION_PLAN_REVISED_Claude.md  ANCESTOR_SPACING_PROBLEM_STATEMENT.md  API_FIX_SUMMARY.md  API_URL_CONFIGURATION.md  DEBUGGING_BILLBOARD_HOVER.md  FINAL_NODE_LINK_REARCHITECTURE_PLAN.md  LABEL_IMPROVEMENTS_PROPOSAL.md  LOCALIZATION_IMPLEMENTATION_PLAN.md  NODE_LINK_REARCHITECTURE_PLAN.md  PHASE1_IMPLEMENTATION_SUMMARY.md  ROOT_NODE_FIX_SUMMARY.md
web/frontend/src/: App.tsx  Comp.tsx  index.css  index.tsx
web/frontend/src/babylon/: ancestorNavigationManager.ts  clusterManager.ts  interactionManager.ts  linkManager.ts  navigationManager.ts  nodeManager.ts  resourceManager.ts  scene.ts  scene.ts.backup
web/frontend/src/demo/: phase1Demo.tsx  phase3Demo.tsx
web/frontend/src/i18n/: PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  README.md  index.tsx
web/frontend/src/services/: apiClient.ts
web/frontend/src/stores/: dataStore.ts
web/frontend/src/test/: environment.test.ts  languageDisplay.test.ts  namespaceUtils.test.ts  nodeValidation.test.ts  phase1.test.ts  phase3-unit.test.ts  phase3.test.ts  setup.ts
web/frontend/src/types/: index.ts
web/frontend/src/ui/: AppHeader.tsx  AppInfoOverlay.tsx  BillboardInfoOverlay.tsx  ErrorOverlay.tsx  LeafNodeOverlay.tsx  Loading.tsx  LocaleSelector.tsx  NamespaceCard.tsx  NamespaceSelector.tsx  NavigationControls.tsx  NodeInfoOverlay.tsx  NodeViewLoading.tsx  Overlay.css  Overlay.tsx  PerformanceMonitor.tsx  SearchBar.tsx  WikiTitleOverlay.tsx  ZoomControl.css  ZoomControl.tsx
web/frontend/src/util/: environment.ts  index.ts
web/frontend/test/: clusterArchitecture.test.ts  interactionManagerNamespaceSwitch.test.ts  quaternionRotation.test.ts
(+41 files in other folders)
