[project]
name = "wp-snapshot-dl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jmespath>=1.0.1",
    "matplotlib==3.10.0",
    "pandas==2.2.3",
    "pytest==8.3.3",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
]
