[project]
name = "wp-embeddings-dataprep"
version = "0.1.0"
description = "Data preparation pipeline for Wikipedia embeddings and clustering"
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.2.0",
    "duckdb>=1.4.1",
    "lagom>=2.7.7",
    "matplotlib==3.10.0",
    "numpy>=2.3.3",
    "openai>=2.5.0",
    "pandas==2.2.3",
    "pyvis>=0.3.2",
    "requests==2.32.3",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.44",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.9.post2",
    "pytest==8.3.3",
    "python-dotenv==1.0.1",
    "wme-sdk",
]

[tool.flake8]
exclude = [".venv", "../wme_sdk", "../web"]
max-line-length = 120

[dependency-groups]
dev = [
    "black>=25.11.0",
    "flake8-pyproject>=1.2.3",
    "ruff>=0.14.5",
    "setuptools>=80.9.0",
    "vulture>=2.14",
]

[tool.ruff]
exclude = [
    ".venv", "../wme_sdk", "../web"
]
line-length = 120

[tool.uv.sources]
wme-sdk = { path = "../wme_sdk", editable = true }

