[project]
name = "wp-embeddings-web"
version = "0.1.0"
description = "Web application for 3D visualization of Wikipedia embeddings clusters"
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.123.4",
    "pydantic>=2.12.3",
    "python-dotenv==1.0.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
    "pytest==8.3.3",
    "pytest-asyncio>=1.3.0",
]

[tool.flake8]
exclude = [".venv", "../wme_sdk", "../dataprep"]
max-line-length = 120

[dependency-groups]
dev = [
    "black>=25.11.0",
    "flake8-pyproject>=1.2.3",
    "ruff>=0.14.5",
    "vulture>=2.14",
]

[tool.ruff]
exclude = [
    ".venv", "../wme_sdk", "../dataprep"
]
line-length = 120
